--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -23,6 +23,8 @@
         <slf4j.version>1.7.6</slf4j.version>
         <logback.version>1.1.1</logback.version>
         <commons-lang3.version>3.2.1</commons-lang3.version>
+        <commons-fileupload.version>1.3.1</commons-fileupload.version>
+        <commons-codec.version>1.9</commons-codec.version>
         <guava.version>16.0.1</guava.version>
         <junit.version>4.11</junit.version>
         <assertj.version>1.5.0</assertj.version>
@@ -221,6 +223,16 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>${commons-fileupload.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons-codec.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
