--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -172,6 +172,12 @@
             <artifactId>jackson-module-jaxb-annotations</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.1.24</version>
+        </dependency>
         <!-- JSON end -->
 
         <!-- LOGGING begin -->
